# backend-challenge

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  mysql.env  pyproject.toml  pytest.ini
backend_challenge/: settings.py  urls.py  wsgi.py
backend_challenge/pulse/: models.py  parsers.py  renderers.py  serializers.py  tests.py  urls.py  utils.py  validators.py  views.py
backend_challenge/pulse/migrations/: 0001_initial.py
doc/files/: pulses.csv  pulses_invalid.csv
mysql-fixtures/: 10_grant_user.sql  20_pulses.sql
